# ordo-ai

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile.mlflow  Makefile  docker-compose.mlflow.yml  langgraph.json  pyproject.toml  restaurant_dataset.jsonl
.claude/: settings.json
.claude/skills/changelog/: SKILL.md
.claude/skills/commit-message/: SKILL.md
data/: disfluency_dataset_aligned.jsonl  disfluency_dataset_bio.jsonl  disfluency_dataset_test.jsonl  disfluency_dataset_train.jsonl  disfluency_dataset_val.jsonl  menu.json  ner_dataset_aligned.jsonl  ner_dataset_bio.jsonl  ner_dataset_llm_labeled.jsonl  ner_dataset_test.jsonl  ner_dataset_train.jsonl  ner_dataset_val.jsonl  ner_label_map.json  synthetic_id_formal_informal_manifest.jsonl  synthetic_id_formal_informal_normalized.jsonl  vocabulary.json
data/disfluency/: label_map.json  test.jsonl  train.jsonl  val.jsonl
data/disfluency_repair/: test.jsonl  train.jsonl  val.jsonl
data/intent/: label_map.json  test.jsonl  train.jsonl  val.jsonl
data/ner/: label_map.json  test.jsonl  train.jsonl  val.jsonl
data/normalized/: augmented_ordering_dataset_normalized.jsonl  intent_dataset_normalized.jsonl
data/raw/: augmented_ordering_dataset.jsonl  disfluencies.json  fnb_bank.json  generated_ordering_dataset.jsonl  intent_dataset.jsonl
docs/: disfluency_node.md  pipeline_flow.md
notebooks/: 1_speech_to_text.ipynb  2_text_normalization.ipynb  3.1_build_disfluency_vocabulary.ipynb  3.1_disfluency_bio_labeling.ipynb  3.2_bio_labeling.ipynb  3.2_disfluency_bio_training.ipynb  4.1_ner_labeling.ipynb  4.2_ner_training.ipynb  5.1_disfluency_repair_seq2seq.ipynb  5.1_intent_classification.ipynb  6.1_intent_classification.ipynb  generate_audio_dataset.ipynb
notebooks/data/: fleurs_validation_transcripts.jsonl  synthetic_id_formal_informal.jsonl  synthetic_id_formal_informal_manifest.jsonl  synthetic_id_formal_informal_normalized.jsonl
scripts/: augment_entity_substitution.py  backfill_dataset_annotations.py  generate_ordering_dataset.py  run_voice_session.py  split_disfluency_repair_dataset.py
src/ordo_ai/: config.py  logging.py  startup.py  tracking.py
src/ordo_ai/graphs/: main_graph.py
src/ordo_ai/nodes/: dialog_agent.py  disfluency.py  fallback_agent.py  intent.py  menu_agent.py  ner.py  normalize.py  order_agent.py  router.py  stt.py
src/ordo_ai/state/: schemas.py
src/ordo_ai/tools/: cart.py  embeddings.py  menu.py
tests/: conftest.py
tests/integration/: test_graph_flow.py
tests/unit/: test_nodes.py  test_state.py
