[project]
name = "ordo-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "ssabrut",email = "michael.gunawan2002@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "faster-whisper (>=1.2.1,<2.0.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "soundfile (>=0.13.1,<0.15.0)",
    "numpy (>=1.24)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "datasets (>=5.0.0,<6.0.0)",
    "jiwer (>=4.0.0,<5.0.0)",
    "realtimestt[faster-whisper] (>=1.0.2,<2.0.0)",
    "openwakeword (>=0.6.0,<0.7.0)",
    "onnxruntime (==1.18.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
