[project]
name = "ordo-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "ssabrut",email = "michael.gunawan2002@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "faster-whisper (>=1.2.1,<2.0.0)",
    "sounddevice (>=0.5.5,<0.6.0)",
    "soundfile (>=0.13.1,<0.15.0)",
    "numpy (>=1.24)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)",
    "datasets (>=5.0.0,<6.0.0)",
    "jiwer (>=4.0.0,<5.0.0)",
    "realtimestt[faster-whisper] (>=1.0.2,<2.0.0)",
    "openwakeword (>=0.6.0,<0.7.0)",
    "onnxruntime (==1.18.1)",
    "num2words (>=0.5.14,<0.6.0)",
    "edge-tts (>=7.2.8,<8.0.0)",
    "transformers (>=5.12.1,<6.0.0)",
    "torch (>=2.12.1,<3.0.0)",
    "accelerate (>=1.14.0,<2.0.0)",
    "seqeval (>=1.2.2,<2.0.0)",
    "evaluate (>=0.4.6,<0.5.0)",
    "stanza (>=1.13.0,<2.0.0)",
    "black[jupyter] (>=26.5.1,<27.0.0)",
    "isort[jupyter] (>=8.0.1,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.3.0,<8.0.0)"
]
